# cpp-zarr

./: CMakeLists.txt  README.md
createZarrFile/: createZarrFile.c
createZarrFile/linux/: createZarrFile.mexa64
dependencies/c-blosc2-2.8.0/: CMakeLists.txt
dependencies/c-blosc2-2.8.0/include/blosc2/: filters-registry.h
dependencies/libuuid-1.0.3/: Makefile  config.status  libtool  libuuid.la
dependencies/libuuid-1.0.3/.deps/: libuuid_la-clear.Plo  libuuid_la-compare.Plo  libuuid_la-copy.Plo  libuuid_la-gen_uuid.Plo  libuuid_la-isnull.Plo  libuuid_la-pack.Plo  libuuid_la-parse.Plo  libuuid_la-randutils.Plo  libuuid_la-unpack.Plo  libuuid_la-unparse.Plo  libuuid_la-uuid_time.Plo
dependencies/libuuid-1.0.3/.libs/: libuuid.so.1.0.0
dependencies/libuuid-1.0.3/autom4te.cache/: output.0  requests  traces.0
dependencies/zlib-1.2.13/: CMakeLists.txt
dependencies/zlib-1.2.8/: CMakeLists.txt
mexSrc/: compile_createZarrFile.m  compile_parallelReadZarr.m  compile_parallelWriteZarr.m  createzarrfile.cpp  createzarrfilemex.cpp  helperfunctions.cpp  helperfunctions.h  parallelreadzarr.cpp  parallelreadzarrmex.cpp  parallelreadzarrwrapper.cpp  parallelreadzarrwrapper.h  parallelwritezarr.cpp  parallelwritezarrmex.cpp  parallelwritezarrread.cpp  parallelwritezarrread.h  zarr.cpp  zarr.h
parallelReadZarr/: parallelReadZarr.c  parallelReadZarr.mexa64
parallelWriteZarr/: helperFunctions.c  helperFunctions.h  parallelReadZarr.c  parallelReadZarr.h  parallelWriteZarr.c  parallelWriteZarr.h  parallelWriteZarr.mexa64
python/: cppzarr.cpp  pyproject.toml  setup.py
python/cppzarr/: __init__.py  cppzarrwrappers.py
python/tests/: test_python.py
src/: helperfunctions.cpp  helperfunctions.h  parallelreadzarr.cpp  parallelreadzarr.h  parallelwritezarr.cpp  parallelwritezarr.h  zarr.cpp  zarr.h
tests/: roundtrip.cpp  test_matlab.m
